--- a/flask_app/templates/editquestion.html
+++ b/flask_app/templates/editquestion.html
@@ -18,6 +18,7 @@
     crossorigin="anonymous"></script>
   <script src="{{ url_for('static',filename='scripts/index.js') }}"></script>
   <script src="{{ url_for('static',filename='scripts/editquestion.js') }}"></script>
+  <script src="https://kit.fontawesome.com/57d9119a00.js" crossorigin="anonymous"></script>
   <title>Flask Overflow</title>
 </head>
 
