--- a/flask_app/templates/viewquestion.html
+++ b/flask_app/templates/viewquestion.html
@@ -88,34 +88,34 @@
                                 officiis distinctio?</p>
                         </div>
                     </div> -->
-                    <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-center">
                         <span id="question-like">
                             <button class="btn btn-secondary mr-3"><i class="fas fa-heart"></i></button>
-                            <span style="height: 20px;" class="badge badge-success">
+                            <span style="height: 20px;" class="badge badge-success mr-4">
                                 <p></p>
                             </span>
                         </span>
                         <span id="question-dislike">
                             <button class="btn btn-secondary mr-3"><i class="fas fa-heart-broken"></i></button>
-                            <span style="height: 20px;" class="badge badge-success">
+                            <span style="height: 20px;" class="badge badge-success mr-4">
                                 <p></p>
                             </span>
                         </span>
                         <span id="question-cry">
                             <button class="btn btn-secondary mr-3"><i class="fas fa-sad-tear"></i></button>
-                            <span style="height: 20px;" class="badge badge-success">
+                            <span style="height: 20px;" class="badge badge-success mr-4">
                                 <p></p>
                             </span>
                         </span>
                         <span id="question-angry">
                             <button class="btn btn-secondary mr-3"><i class="fas fa-angry"></i></button>
-                            <span style="height: 20px;" class="badge badge-success">
+                            <span style="height: 20px;" class="badge badge-success mr-4">
                                 <p></p>
                             </span>
                         </span>
                         <span id="question-laugh">
                             <button class="btn btn-secondary mr-3"><i class="fas fa-laugh-beam"></i></button>
-                            <span style="height: 20px;" class="badge badge-success">
+                            <span style="height: 20px;" class="badge badge-success mr-4">
                                 <p></p>
                             </span>
                         </span>
