Made final changes

--- a/flask_app/templates/viewquestion.html
+++ b/flask_app/templates/viewquestion.html
@@ -38,7 +38,8 @@
                 <a class="nav-link active" onclick="route('/ask-question')">Ask Question</a>
             </li>
             <li class="nav-item me-1">
-                <a class="nav-link active" href="#" onclick="logout()">Logout</a>
+                <a class="nav-link active" onclick="logout()">Logout</a>
+            </li>
         </ul>
     </nav>
     <div class="container">
@@ -88,34 +89,34 @@
                                 officiis distinctio?</p>
                         </div>
                     </div> -->
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center p-2">
                         <span id="question-like">
-                            <button class="btn btn-secondary mr-3"><i class="fas fa-heart"></i></button>
-                            <span style="height: 20px;" class="badge badge-success mr-4">
+                            <button class="btn btn-primary mr-3"><i class="fas fa-heart"></i></button>
+                            <span style="height: 20px;" class="badge badge-primary mr-4">
                                 <p></p>
                             </span>
                         </span>
                         <span id="question-dislike">
-                            <button class="btn btn-secondary mr-3"><i class="fas fa-heart-broken"></i></button>
-                            <span style="height: 20px;" class="badge badge-success mr-4">
+                            <button class="btn btn-primary mr-3"><i class="fas fa-heart-broken"></i></button>
+                            <span style="height: 20px;" class="badge badge-primary mr-4">
                                 <p></p>
                             </span>
                         </span>
                         <span id="question-cry">
-                            <button class="btn btn-secondary mr-3"><i class="fas fa-sad-tear"></i></button>
-                            <span style="height: 20px;" class="badge badge-success mr-4">
+                            <button class="btn btn-primary mr-3"><i class="fas fa-sad-tear"></i></button>
+                            <span style="height: 20px;" class="badge badge-primary mr-4">
                                 <p></p>
                             </span>
                         </span>
                         <span id="question-angry">
-                            <button class="btn btn-secondary mr-3"><i class="fas fa-angry"></i></button>
-                            <span style="height: 20px;" class="badge badge-success mr-4">
+                            <button class="btn btn-primary mr-3"><i class="fas fa-angry"></i></button>
+                            <span style="height: 20px;" class="badge badge-primary mr-4">
                                 <p></p>
                             </span>
                         </span>
                         <span id="question-laugh">
-                            <button class="btn btn-secondary mr-3"><i class="fas fa-laugh-beam"></i></button>
-                            <span style="height: 20px;" class="badge badge-success mr-4">
+                            <button class="btn btn-primary mr-3"><i class="fas fa-laugh-beam"></i></button>
+                            <span style="height: 20px;" class="badge badge-primary mr-4">
                                 <p></p>
                             </span>
                         </span>
