--- a/flask_app/static/styles/style.css
+++ b/flask_app/static/styles/style.css
@@ -53,5 +53,15 @@ body {
 
 .btn-reacted {
     background-color: white!important;
-    color: green!important;
+    color: #0275d8!important;
+}
+
+.nav-link:hover {
+    cursor: pointer;
+}
+
+.nav-link-selected {
+    background-color: #00000000 !important; 
+    border: 1px solid #0d6efd !important; 
+    color: #0d6efd !important;
 }
