--- a/flask_app/templates/feed.html
+++ b/flask_app/templates/feed.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/feedstyle.css') }}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="{{ url_for('static',filename='scripts/index.js') }}"></script>
@@ -29,7 +30,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/57d9119a00.js" crossorigin="anonymous"></script>
-  <title>QnA Feed</title>
+  <title>Flask Overflow</title>
 </head>
 
 <body class="bg-light">
@@ -40,13 +41,14 @@
         <h4 id="user-profile" class="text-white"></h4>
       </li>
       <li class="nav-item me-1">
-        <a class="nav-link disabled" onclick="route('/feed')">Feed Page</a>
+        <a class="nav-link active nav-link-selected" onclick="route('/feed')">Feed Page</a>
       </li>
       <li class="nav-item me-1">
         <a class="nav-link active" onclick="route('/ask-question')">Ask Question</a>
       </li>
       <li class="nav-item me-1">
-        <a class="nav-link active" href="#" onclick="logout()">Logout</a>
+        <a class="nav-link active" onclick="logout()">Logout</a>
+      </li>
     </ul>
   </nav>
   <div id="feed-container" class="container">
