--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -17,7 +17,7 @@
 
 <body class="bg-light" id="login-page" style="display: none;">
     <section style="background-color: #eee; min-height: 100vh;">
-        <div class="container h-100 pb-3">
+        <div class="container h-100 py-3">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-12 col-xl-11">
               <div class="card text-black" style="border-radius: 25px;">
